[gd_scene load_steps=9 format=2]

[ext_resource path="res://Maps/Garage/body.png" type="Texture" id=1]
[ext_resource path="res://Maps/Garage/left_arm.png" type="Texture" id=2]
[ext_resource path="res://Maps/Garage/left_leg.png" type="Texture" id=3]
[ext_resource path="res://Maps/Garage/right_leg.png" type="Texture" id=4]
[ext_resource path="res://Maps/Garage/PartsFrame.png" type="Texture" id=5]
[ext_resource path="res://Maps/Garage/right_arm.png" type="Texture" id=6]
[ext_resource path="res://Maps/Garage/head_blank.png" type="Texture" id=7]
[ext_resource path="res://UI/PartsUI.gd" type="Script" id=8]

[node name="PartsUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="PartsFrame" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -24.0
margin_right = 72.0
texture = ExtResource( 5 )

[node name="Body" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 1.0
margin_right = 25.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="LeftArm" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 32.0
margin_top = -3.0
margin_right = 56.0
margin_bottom = 21.0
texture = ExtResource( 2 )

[node name="RightArm" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 43.0
margin_top = -3.0
margin_right = 67.0
margin_bottom = 21.0
texture = ExtResource( 6 )

[node name="Head" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 73.0
margin_top = 3.0
margin_right = 97.0
margin_bottom = 27.0
texture = ExtResource( 7 )

[node name="LeftLeg" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 98.0
margin_top = -6.0
margin_right = 122.0
margin_bottom = 18.0
texture = ExtResource( 3 )

[node name="RightLeg" type="TextureRect" parent="PartsFrame"]
visible = false
margin_left = 118.0
margin_top = -6.0
margin_right = 142.0
margin_bottom = 18.0
texture = ExtResource( 4 )
